--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,9 @@ jobs:
           - dependency-cache
       - run:
           name: Install dependency
-          command: bundle install --jobs=4 --retry=3 --path ./.bundle
+          command: |
+            gem install -v 1.17.3 bundler
+            bundle install --jobs=4 --retry=3 --path ./.bundle
       - save_cache:
           paths:
             - ./.bundle
